--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 				</fieldset>
 				<fieldset>
 					<legend>Vanity Strings:</legend>
-					
+					<input type="text" name="vanityStrings" value="" placeholder="1eetc0de">
+
 				</fieldset>>
 				<input type="button" value="Generate" onclick="buttonClick();"">
 
