--- a/index.html
+++ b/index.html
@@ -19,22 +19,16 @@
 				<fieldset>
 					<legend>Settings:</legend>
 					Vanity Placement:<br>
-					<input type="checkbox" onchange="handleSettings(0);" name="checkAll" value="all">
-					Anywhere:<br>
-					<input type="checkbox" onchange="handleSettings(1);" name="checkStart" value="start">
-					At Start:<br>
-					<input type="checkbox" onchange="handleSettings(1);" name="checkEnd" value="end">
-					At End:<br><br>
-					<input type="checkbox" name="enableLeetspeak" value="leetspeak">
-					Enable leetspeak: <br><br>
+					Anywhere:<input type="checkbox" onchange="handleSettings(0);" name="checkAll" value="all">
+					At Start:<input type="checkbox" onchange="handleSettings(1);" name="checkStart" value="start">
+					At End:<input type="checkbox" onchange="handleSettings(1);" name="checkEnd" value="end">
+					<br><br>Enable leetspeak: <input type="checkbox" name="enableLeetspeak" value="leetspeak">
 				</fieldset>
 				<fieldset>
 					<legend>Vanity Strings:</legend>
 					<input type="text" name="vanityStrings" value="" placeholder="1eetc0de">
-
-				</fieldset>>
-				<input type="button" value="Generate" onclick="buttonClick();"">
-
+				</fieldset>
+				<input class="button" type="button" value="Generate" onclick="buttonClick();">
 			</form>
 		</div>
 	</div>
