--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				</fieldset>
 				<fieldset>
 					<legend>Vanity Strings:</legend>
-					<input type="text" name="vanityStrings" value="" placeholder="1eetc0de">
+					<textarea type="text" name="vanityStrings" value="" placeholder="1eetc0de"></textarea>
 				</fieldset>
 				<input class="button" type="button" value="Generate" onclick="buttonClick();">
 			</form>
