Added async generation

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<legend>Vanity Strings:</legend>
 					<textarea type="text" name="vanityStrings" value="" placeholder="1eetc0de"></textarea>
 				</fieldset>
-				<input class="button" type="button" value="Generate" onclick="buttonClick();">
+				<input class="button" name="button" type="button" value="Generate" onclick="buttonClick();">
 			</form>
 		</div>
 	</div>
