--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
 				<fieldset>
 					<legend>Settings:</legend>
 					Vanity Placement:<br>
-					Anywhere:<input type="checkbox" onchange="handleSettings(0);" name="checkAll" value="all">
-					At Start:<input type="checkbox" onchange="handleSettings(1);" name="checkStart" value="start">
-					At End:<input type="checkbox" onchange="handleSettings(1);" name="checkEnd" value="end">
-					<br><br>Enable leetspeak: <input type="checkbox" name="enableLeetspeak" value="leetspeak">
+					Anywhere:<input type="checkbox" onchange="handleSettings(0);" name="checkAll">
+					At Start:<input type="checkbox" onchange="handleSettings(1);" name="checkStart">
+					At End:<input type="checkbox" onchange="handleSettings(1);" name="checkEnd">
+					<br><br>Enable leetspeak: <input type="checkbox" name="enableLeetspeak">
+					<br><br>Case sensitive: <input type="checkbox" name="caseSensitive">
+					<br><br>Limit: <input type="input" name="limit" value="" placeholder="500">
 				</fieldset>
 				<fieldset>
 					<legend>Vanity Strings:</legend>
-					<textarea type="text" name="vanityStrings" value="" placeholder="1eetc0de"></textarea>
+					<textarea type="text" name="vanityStrings" value="" placeholder="1eetc0de" cols="100" rows="10"></textarea>
 				</fieldset>
 				<input class="button" name="button" type="button" value="Generate" onclick="buttonClick();">
 			</form>
