--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 		</div>
 	</div>
 <script type="text/javascript" src="js/web3.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/indexMult.js"></script>
+
 </body>
 </html>
