--- a/With Node/index.html
+++ b/With Node/index.html
@@ -34,8 +34,6 @@
 			</form>
 		</div>
 	</div>
-<script type="text/javascript" src="js/web3.js"></script>
-<script type="text/javascript" src="js/indexMult.js"></script>
-
+<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
